[package]
name = "rustutil"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.0"
git2 = "0.17.1"
log = "0.4.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
url = "2.3.1"

[profile.release]
strip = true
lto = true
