[package]
name = "rustutil"
version = "0.1.4"
edition = "2021"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.0"
git2 = "0.17.2"
log = "0.4.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic
strip = true        # Strip symbols from binary

[features]
target-cache = [] # Enables the target cache, this saves the target directory to /targets.
                  # This saves rebuilding a packages depencencies when updating.
                  # The folder is deleted when the package is removed.